Finance Tracker/backend/auth-service/test_output.txt
FAIL src/controllers/auth.controller.mfa.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation, specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    D:\Projects\Finance Tracker\node_modules\@scure\base\index.js:326
    export const utils = {
    ^^^^^^

    SyntaxError: Unexpected token 'export'

    > 1 | const { authenticator } = require('otplib');
        |                           ^
      2 | const qrcode = require('qrcode');
      3 | const redis = require('../config/redis');
      4 |

      at Runtime.createScriptFromCode (../../node_modules/jest-runtime/build/index.js:1318:40)
      at Object.<anonymous> (../../node_modules/@otplib/plugin-base32-scure/src/index.ts:1:1)
      at Object.<anonymous> (../../node_modules/otplib/src/functional.ts:13:8)
      at Object.require (src/services/mfa.service.js:1:27)
      at Object.require (src/controllers/auth.controller.js:6:20)
      at Object.require (src/controllers/auth.controller.mfa.test.js:4:24)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.683 s
Ran all test suites matching src/controllers/auth.controller.mfa.test.js.
